@startuml

title __LAB5's Class Diagram__\n

  package  {
    package ifmo.programming.lab5 {
      class Building {
          {static} - FILENAME_ENV : String
          - collection : Stack<Room>
          - creationDate : Date
          - hasChanged : boolean
          + add()
          + load()
          + remove()
          + remove_greater()
          + removeFirst()
          + getCollection()
          + setCollection()
          + getSize()
          + getCreationDate()
          + setCreationDate()
          + isChanged()
          + setChange()
          + getCollectionInfo()
          + getHelp()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class BuildingChecker {
          {static} ~ getCollectionFromJSON()
          {static} ~ saveCollection()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      abstract class Furnishings {
          - name : String
          + getName()
          + setName()
          ~ Furnishings()
          ~ Furnishings()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class Main {
          {static} - FILENAME_ENV : String
          {static} - FILE_FOR_AUTOSAVE : String
          {static} + main()
          {static} - processCommand()
          {static} # getContentFromFile()
          {static} - getNextCommand()
          {static} - divideCommand()
          {static} - saveAfterPressKey()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class UserCommand {
          ~ name : String
          ~ value : String
          ~ UserCommand()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class Room {
          - wallcolor : String
          - width : int
          - height : int
          - length : int
          - shelf : ArrayList<Thing>
          ~ Room()
          ~ Room()
          + getShelf()
          ~ getWallcolor()
          ~ setWallcolor()
          + getWidth()
          + getHeight()
          + getLength()
          - setWidth()
          - setHeight()
          - setLength()
          + compareTo()
          + toString()
          + equals()
          + hashCode()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class Thing {
          - size : int
          + setSize()
          + getSize()
          ~ Thing()
      }
    }
  }
  

  package  {
    package ifmo.programming.lab5 {
      class RoomFactory {
          {static} ~ makeRoomFromJSON()
      }
    }
  }
  

  Main +-down- UserCommand
  Room -up-|> Comparable
  Room +-down- Thing
  Thing -up-|> Furnishings


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
